--- a/index.html
+++ b/index.html
@@ -72,12 +72,6 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <style>
         /* Basic styles; adjust according to your existing CSS */
-        @font-face {
-  font-family: 'MyFont';
-  src: url('myfont.woff2') format('woff2');
-  font-display: swap;
-}
-
         body {
             font-family: Arial, sans-serif;
             color: #333;
@@ -359,7 +353,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <li>🩸 Blood in the urine</li>
     <li>💔 Reduced Sexual Performance or erectile dysfunction</li>
 </ul>
- <img src="img/illu.jpeg" srcset="medium.jpg 768w, large.jpg 1200w" alt="picture of bph"> loading="lazy">
+ <img src="img/illu.jpeg" srcset="illu-medium.jpg 768w, illu-large.jpg 1200w" alt="picture of bph" loading="lazy">
         <p><b>Are you not tired of using your Contiflo, D.u.o.d.a.r.t  for maintaining the bondage of Prostate Enlargement which many doctors
              had made you believe no cure for?
 The truth is this most of this orthodox treatment  has a lot of side effect which you wont be told  and some would only give temporary solutions
@@ -372,9 +366,9 @@ The truth is this most of this orthodox treatment  has a lot of side effect whic
         <p>Imagine never having to wake up multiple times at night to urinate, enjoying a healthy sex life again, no more painful urination, and traveling without the fear of frequent urination. If that sounds like a dream, keep reading because we have the perfect solution for you.</p>
            <h2 class="definition">Don’t Wait Until It’s Too Late</h2>
         <p>Prostate issues can lead to severe complications if left untreated, such as <strong>erectile dysfunction, bladder stones, blood in the urine, bladder damage, kidney damage, and even death</strong>. Imagine the constant pain, sleepless nights, and embarrassment continuing to control your life.</p>
-<img src="img/rush.gif" srcset="medium.jpg 768w, large.jpg 1200w" alt="picture of bph"> loading="lazy">
+<img src="img/rush.gif" srcset="rush-medium.gif 768w, rush-large.gif 1200w" alt="picture of bph" loading="lazy">
    <h3 class="definition"><center>DO NOT LET IT RESULT TO THIS</h3></center>
-   <img src="img/catheter.jpg" srcset="medium.jpg 768w, large.jpg 1200w" alt="picture of bph"> loading="lazy">
+   <img src="img/catheter.jpg" srcset="catheter-medium.jpg 768w, catheter-large.jpg 1200w" alt="picture of catheter" loading="lazy">
          <h3 class="definition">Act Now and Avoid the Consequences:</h3>
           <p><b>Don’t go for prostate <span style="color:red; font-weight: bold;">S.U.R.G.E.R.Y</span> (It Has After-Effect), 
 Surgery was the only solution for prostate patients in the past. Involves a “Transurethral Resection of the Prostate”
@@ -407,7 +401,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
         <p>These ingredients work together to give lasting results and help you live pain-free without worrying about surgery or expensive treatments.</p>
 
         <div class="media">
-            <img src="img/prowel.jpg" srcset="medium.jpg 768w, large.jpg 1200w" alt="Prostate Cure Plus Bottle" class="product-image" loading="lazy">
+            <img src="img/prowel.jpg" srcset="prowel-medium.jpg 768w, prowel-large.jpg 1200w" alt="Prostate Cure Plus Bottle" class="product-image" loading="lazy">
         </div>
     </section>
  <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Cure Plus'.</p>
@@ -427,31 +421,31 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
           <div class="testimonials">
             <h2>What Nigerian Men Are Saying About Prostate Cure Plus</h2>
             <div class="testimonial">
-                 <img class="imgtest" src="img/qw.png" srcset="medium.jpg 768w, large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
+                 <img class="imgtest" src="img/qw.png" srcset="qw-medium.jpg 768w, qw-large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
                 <h5>Mr. Ade (53), Berger Lagos</h5>
                 <p>"Before discovering 'Prostate Cure Plus', I was waking up multiple times a night to urinate. I tried various treatments like Norland and Duodart, but nothing provided lasting relief. Within a few weeks of starting 'Prostate Cure Plus', I could sleep through the night without any interruptions. It’s truly a miracle. I finally have my life back!"</p>
              <p>Contact for Verification: <a href="tel:+2347086865133">+2348033119148</a></p>
      </div>
             <div class="testimonial">
-                 <img class="imgtest" src="img/qwe.png" srcset="medium.jpg 768w, large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
+                 <img class="imgtest" src="img/qwe.png" srcset="qwe-medium.jpg 768w, qwe-large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
                <h5>Mr. Yusuf (62) Maitama Abuja: </h5>
                 <p>"After spending over 250,000 Naira on different treatments with no success, I was extremely skeptical about trying another product. But 'Prostate Cure Plus' proved to be different. Not only did it provide relief, but it also improved my overall well-being. I can now enjoy activities without the constant fear of frequent urination. This product is a game-changer."</p>
            <p>Contact for Verification: <a href="tel:+2347086865133">+2348161583146</a></p>
             </div>
             <div class="testimonial">
-                 <img class="imgtest" src="img/tfake.jpg" srcset="medium.jpg 768w, large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
+                 <img class="imgtest" src="img/tfake.jpg" srcset="tfake-medium.jpg 768w, tfake-large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
                 <h6>Mr. Chukwu (47)Adagharagba Street, Ughelli.: </h6>
                 <p>"Frequent urination was affecting every aspect of my life. I couldn't travel, and my social life suffered because I was always worried about finding a bathroom. 'Prostate Cure Plus' has changed everything. I can now travel long distances without worry, and my confidence has been restored. It’s unbelievable how effective this product is."</p>
             <p>Contact for Verification: <a href="tel:+2347086865133">+2349040043127</a></p>
             </div>
             <div class="testimonial">
-                 <img class="imgtest" src="img/haruna.jpg" srcset="medium.jpg 768w, large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
+                 <img class="imgtest" src="img/haruna.jpg" srcset="haruna-medium.jpg 768w, haruna-large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
                 <h6>Mr. Adebayo (58) off Abaranje road, Ikotun Lagos : </h6>
                 <p>"Erectile dysfunction and frequent urination were straining my marriage. My wife and I were frustrated and losing hope. 'Prostate Cure Plus' didn’t just relieve my symptoms; it revitalized our intimacy. We can now enjoy our time together without any interruptions or embarrassment. This product saved my marriage and brought joy back into our lives."</p>
             <p>Contact for Verification: <a href="tel:+2347086865133">+2349151625737</a></p>
             </div>
             <div class="testimonial">
-                 <img class="imgtest" src="img/police.png" srcset="medium.jpg 768w, large.jpg 1200w" alt="Avatar" loading="lazy" style="width:90px">
+                 <img class="imgtest" src="img/police.png" srcset="police-medium.png 768w, police-large.png 1200w" alt="Avatar" loading="lazy" style="width:90px">
                   <h5>Mr. Ojo (55) tanke ilorin:</h5>
                 <p>"The pain while urinating was unbearable. I needed to be placed on a catheter and was constantly frustrated with the lack of effective treatments and my fear of surgery. 'Prostate Cure Plus' offered me a solution that was both natural and powerful. The pain is gone, and I feel like I’ve been given a second chance at life. I removed my catheter after the second bottle. This product is nothing short of amazing."</p>
               <p>Contact for Verification: <a href="tel:+2347086865133">+2348134402903</a></p>
@@ -467,7 +461,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
           <section style="padding: 20px; background-color: #f9f9f9; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
   <h2 style="color: #2c3e50; font-family: 'Arial', sans-serif; text-align: center;">Recognized by Trusted Media: A Proven Solution for Prostate Health</h2>
   <p style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.6;">
- <img src="img/newp.jpg" srcset="medium.jpg 768w, large.jpg 1200w" alt="newspaper" loading="lazy">
+ <img src="img/newp.jpg" srcset="newp-medium.jpg 768w, newp-large.jpg 1200w" alt="newspaper" loading="lazy">
     <strong>Prostate Cure Plus</strong> has been featured in one of Nigeria's leading newspapers, highlighting its remarkable benefits for men over 40 suffering from prostate-related challenges. This recognition is a testament to our commitment to providing a natural, effective, and lasting solution for issues like frequent urination, urinary pain, and erectile dysfunction.
   </p>
   <h3 style="color: #27ae60; font-family: 'Arial', sans-serif; margin-top: 20px;">Why the Media is Talking About Prostate Cure Plus</h3>
@@ -483,7 +477,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
 
 <h3 class="hame"> Don't let skepticism hold you back any longer. If you don’t see noticeable improvement in 30 days, 
                snap the empty bottles for a full refund. No questions asked.</h3>  
-     <img src="img/prowel.jpg" srcset="medium.jpg 768w, large.jpg 1200w" alt="prostate  bottle " loading="lazy">
+     <img src="img/prowel.jpg" srcset="prowel-medium.jpg 768w, prowel-large.jpg 1200w" alt="prostate  bottle " loading="lazy">
            <h3><center>Clinical Strenght</center></h3>
      <h3 class="offer"> ENJOY MASSIVE DISCOUNT <br>
      <div>
@@ -553,7 +547,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
 </script>
 
      </script>
-     <img src="img/Delivery.png" srcset="medium.jpg 768w, large.jpg 1200w" alt="Delivery" loading="lazy">
+     <img src="img/Delivery.png" srcset="Delivery-medium.png 768w, Delivery-large.jpg 1200w" alt="Delivery" loading="lazy">
      <h2 style="text-align: center"> Fill this Contact Form
      
      </h2>
