--- a/index.html
+++ b/index.html
@@ -333,10 +333,11 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <header>
         <div class="container">
-            <h1 class="refund">SAY GOODBYE TO ENLARGED PROSTATE, PROSTATITIS AND OTHER PROSTATE PROBLEMS IN JUST 30DAYS</h1>
-            <p>Clinically Proven | Approved by NAFDAC | Trusted by Thousands of Nigerian Men–<span class="hassle">TAKE ADVANTAGE OF OUR LIMITED-TIME-END-OF-YEAR-DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
-
- </span</p>
+            <h1 class="refund">TIRED OF FREQUENT URINATION AT NIGHT, PROSTATITIS AND OTHER PROSTATE PROBLEMS 
+                 Discover How to Stop It Naturally—Without Surgery!</h1>
+            <p>Over 2,000 men in Nigeria have used this natural formula to shrink their prostate and sleep through the night.
+                 Now it’s your turn
+        </span</p>
         </div>
     </header>
  
