--- a/index.html
+++ b/index.html
@@ -121,8 +121,6 @@ ul.symptom-list {
 
 ul.symptom-list li {
     background: #f8f9fa; /* Light background for contrast */
-    border: 1px solid #ddd; /* Light border for definition */
-    border-radius: 8px; /* Rounded corners */
     padding: 10px 15px; /* Add some space inside each item */
     margin-bottom: 10px; /* Space between items */
     display: flex; /* Align items horizontally */
@@ -132,10 +130,6 @@ ul.symptom-list li {
     transition: background 0.3s ease, color 0.3s ease; /* Smooth background and text color transitions */
 }
 
-ul.symptom-list li:hover {
-    background: #e2e6ea; /* Change background on hover */
-    color: #007bff; /* Change text color on hover */
-}
 
 ul.symptom-list li::before {
     content: ''; /* Clear default bullet points */
@@ -385,7 +379,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <h2>Do These Symptoms Sound familiar:</h2>
         <ul class="symptom-list">
     <li>🚽 Frequent urination waking up multiple times at nights</li>
-    <li>🔥 Pain or burning sensation while urinating/li>
+    <li>🔥 Pain or burning sensation while urinating</li>
     <li>💧 Weak & slow urine stream (takes time to finish)</li>
     <li>🚫 Bladder never feels empty after urinationn</li>
     <li>🔄 Struggling to start urination even when you feel pressure</li>
@@ -393,7 +387,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <li>🩸 Blood in urine (a dangerous sign)</li>
     <li>💔Low sex drive & erectile dysfunction</li>
 </ul>
- <img src="img/illu.jpeg" srcset="illu-medium.jpg 768w, illu-large.jpg 1200w" alt="picture of bph" loading="lazy">
+ <img src="img/illu.jpeg" srcset="illu-medium.jpg 768w, illu-large.jpg 1200w" alt="picture of bph" >
         <p><b>Tired of using Contiflo, Duodart with no real cure?
 These drugs only manage symptoms, not cure the root cause.
 They have hidden side effects doctors won’t tell you.
@@ -453,18 +447,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
     </section>
  <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Cure Plus'.</p>
 
-<div class="benefits-container">
-        <h2>What Prostate Cure Plus Can Do for You</h2>
-        <ul class="benefits-list"><b>
-            <li>Your enlarged prostate or your prostate gland will be corrected and restored to its original healthy state.</li>
-            <li>You will never have to wake up frequently at night to urinate again; which means you will enjoy a peaceful sleep always.</li>
-            <li>The difficulty you experience when urinating will finally stop.</li>
-            <li>You will be able to fully empty your bladder at a go, and the dribbling will finally stop.</li>
-            <li>If you’re already experiencing blood in urine or you’ve developed a urinary tract infection due to poor treatment of the enlarged prostate, this pack will also help you treat these conditions successfully.</li>
-            <li>Your sex life and vitality will be restored and come back to life.</li>
-            <li>Most importantly, you’ll become healthy once again and thus prolong your life, and many more.</li></b>
-        </ul>
-    </div>
+
           <div class="testimonials">
             <h2>What Nigerian Men Are Saying About Prostate Cure Plus</h2>
             <div class="testimonial">
