--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prostate Cure Plus - Guaranteed Prostate Health Solution</title>
+    <title>Prostalin Plus - Guaranteed Prostate Health Solution</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <style>
         /* Basic styles; adjust according to your existing CSS */
@@ -334,7 +334,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <header>
         <div class="container">
             <h1 class="refund">SAY GOODBYE TO ENLARGED PROSTATE, PROSTATITIS AND OTHER PROSTATE PROBLEMS IN JUST 30DAYS</h1>
-            <p>Clinically Proven | Approved by NAFDAC | Trusted by Thousands of Nigerian Men–<span class="hassle">TAKE ADVANTAGE OF OUR LIMITED-TIME-END-OF-YEAR-DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
+            <p>Clinically Proven | Approved by NAFDAC | Trusted by Thousands of Nigerian Men–<span class="hassle">TAKE ADVANTAGE OF OUR LIMITED-TIME DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
 
  </span</p>
         </div>
@@ -381,34 +381,30 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
 <p><b>Use this product instead. Go for it if you can afford it. It is 100% Natural made from natural ingredients and not organic chemicals. 
      Thus, you can combine it with any Treatments you have been using for certain ailments you are experiencing.</p></b>
  <section class="prostate-well-section">
-        <h1>Here’s How Prostate Cure Plus Works to Solve Your Prostate Problems Permanently!</h1>
-        <p>Prostate Cure Plus is made with all-natural ingredients that work together to shrink your prostate, lower your PSA levels, and stop the pain and discomfort you've been feeling.</p>
+        <h1>Here’s How Prostalin Plus Works to Solve Your Prostate Problems Permanently!</h1>
+        <p>PProstalin Plus is made with all-natural ingredients that work together to shrink your prostate, lower your PSA levels, and stop the pain and discomfort you've been feeling.</p>
         
         <h2>How It Works:</h2>
         <ul class="ingredient-list">
             <li><strong>Saw Palmetto:</strong> Helps reduce prostate size and relieve frequent urination.</li>
-            <li><strong>Nettle Root:</strong> Eases pain and helps you urinate better.</li>
-            <li><strong>Pygeum Bark:</strong> Improves sexual health and reduces prostate inflammation.</li>
-            <li><strong>Pumpkin Seed Oil:</strong> Keeps your bladder healthy and reduces discomfort when urinating.</li>
+            <li><strong>Nettle extract:</strong> Eases pain and helps you urinate better.</li>
+            <li><strong>Pygeum Africanum:</strong> Improves sexual health and reduces prostate inflammation.</li>
+            <li><strong>Pumpkin Seed Extract</strong> Keeps your bladder healthy and reduces discomfort when urinating.</li>
             <li><strong>Beta-Sitosterol:</strong> Supports healthy urine flow and reduces bladder problems.</li>
-            <li><strong>Zinc:</strong> Helps maintain healthy prostate function and reduces inflammation.</li>
-            <li><strong>Lycopene:</strong> A powerful antioxidant that supports prostate health and reduces the risk of enlargement.</li>
-            <li><strong>Quercetin:</strong> Reduces swelling in the prostate and helps with urination.</li>
-            <li><strong>Turmeric:</strong> Contains anti-inflammatory properties that help reduce pain and inflammation.</li>
-            <li><strong>Green Tea Extract:</strong> Improves prostate health and helps lower PSA levels.</li>
+            <li><strong>Magnesium Sterate:</strong> Helps maintain healthy prostate function and reduces inflammation.</li>
         </ul>
 
         <p>These ingredients work together to give lasting results and help you live pain-free without worrying about surgery or expensive treatments.</p>
 
         <div class="media">
-            <img src="img/prowel.jpg" alt="Prostate Cure Plus Bottle" class="product-image">
+            <img src="img/prostalin.jpg" alt="Prostalin Plus Bottle" class="product-image">
             
         </div>
     </section>
- <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Cure Plus'.</p>
+ <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostalin Plus'.</p>
 
 <div class="benefits-container">
-        <h2>What Prostate Cure Plus Can Do for You</h2>
+        <h2>What Prostatelin Plus Can Do for You</h2>
         <ul class="benefits-list"><b>
             <li>Your enlarged prostate or your prostate gland will be corrected and restored to its original healthy state.</li>
             <li>You will never have to wake up frequently at night to urinate again; which means you will enjoy a peaceful sleep always.</li>
@@ -420,40 +416,40 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
         </ul>
     </div>
           <div class="testimonials">
-            <h2>What Nigerian Men Are Saying About Prostate Cure Plus</h2>
+            <h2>What Nigerian Men Are Saying About Prostalin Plus</h2>
             <div class="testimonial">
                  <img class="imgtest" src="img/qw.png" alt="Avatar" style="width:90px">
                 <h5>Mr. Ade (53), Berger Lagos</h5>
-                <p>"Before discovering 'Prostate Cure Plus', I was waking up multiple times a night to urinate. I tried various treatments like Norland and Duodart, but nothing provided lasting relief. Within a few weeks of starting 'Prostate Cure Plus', I could sleep through the night without any interruptions. It’s truly a miracle. I finally have my life back!"</p>
+                <p>"Before discovering 'Prostalin Plus', I was waking up multiple times a night to urinate. I tried various treatments like Norland and Duodart, but nothing provided lasting relief. Within a few weeks of starting 'Prostalin Plus', I could sleep through the night without any interruptions. It’s truly a miracle. I finally have my life back!"</p>
              <p>Contact for Verification: <a href="tel:+2347086865133">+2348033119148</a></p>
      </div>
             <div class="testimonial">
                  <img class="imgtest" src="img/qwe.png" alt="Avatar" style="width:90px">
                <h5>Mr. Yusuf (62) Maitama Abuja: </h5>
-                <p>"After spending over 250,000 Naira on different treatments with no success, I was extremely skeptical about trying another product. But 'Prostate Cure Plus' proved to be different. Not only did it provide relief, but it also improved my overall well-being. I can now enjoy activities without the constant fear of frequent urination. This product is a game-changer."</p>
+                <p>"After spending over 250,000 Naira on different treatments with no success, I was extremely skeptical about trying another product. But 'Prostalin Plus' proved to be different. Not only did it provide relief, but it also improved my overall well-being. I can now enjoy activities without the constant fear of frequent urination. This product is a game-changer."</p>
            <p>Contact for Verification: <a href="tel:+2347086865133">+2348161583146</a></p>
             </div>
             <div class="testimonial">
                  <img class="imgtest" src="img/tfake.jpg" alt="Avatar" style="width:90px">
                 <h6>Mr. Chukwu (47)Adagharagba Street, Ughelli.: </h6>
-                <p>"Frequent urination was affecting every aspect of my life. I couldn't travel, and my social life suffered because I was always worried about finding a bathroom. 'Prostate Cure Plus' has changed everything. I can now travel long distances without worry, and my confidence has been restored. It’s unbelievable how effective this product is."</p>
+                <p>"Frequent urination was affecting every aspect of my life. I couldn't travel, and my social life suffered because I was always worried about finding a bathroom. 'Prostalin Plus' has changed everything. I can now travel long distances without worry, and my confidence has been restored. It’s unbelievable how effective this product is."</p>
             <p>Contact for Verification: <a href="tel:+2347086865133">+2349040043127</a></p>
             </div>
             <div class="testimonial">
                  <img class="imgtest" src="img/haruna.jpg" alt="Avatar" style="width:90px">
                 <h6>Mr. Adebayo (58) off Abaranje road, Ikotun Lagos : </h6>
-                <p>"Erectile dysfunction and frequent urination were straining my marriage. My wife and I were frustrated and losing hope. 'Prostate Cure Plus' didn’t just relieve my symptoms; it revitalized our intimacy. We can now enjoy our time together without any interruptions or embarrassment. This product saved my marriage and brought joy back into our lives."</p>
+                <p>"Erectile dysfunction and frequent urination were straining my marriage. My wife and I were frustrated and losing hope. 'Prostalin Plus' didn’t just relieve my symptoms; it revitalized our intimacy. We can now enjoy our time together without any interruptions or embarrassment. This product saved my marriage and brought joy back into our lives."</p>
             <p>Contact for Verification: <a href="tel:+2347086865133">+2349151625737</a></p>
             </div>
             <div class="testimonial">
                  <img class="imgtest" src="img/police.png" alt="Avatar" style="width:90px">
                   <h5>Mr. Ojo (55) tanke ilorin:</h5>
-                <p>"The pain while urinating was unbearable. I needed to be placed on a catheter and was constantly frustrated with the lack of effective treatments and my fear of surgery. 'Prostate Cure Plus' offered me a solution that was both natural and powerful. The pain is gone, and I feel like I’ve been given a second chance at life. I removed my catheter after the second bottle. This product is nothing short of amazing."</p>
+                <p>"The pain while urinating was unbearable. I needed to be placed on a catheter and was constantly frustrated with the lack of effective treatments and my fear of surgery. 'Prostalin Plus' offered me a solution that was both natural and powerful. The pain is gone, and I feel like I’ve been given a second chance at life. I removed my catheter after the second bottle. This product is nothing short of amazing."</p>
               <p>Contact for Verification: <a href="tel:+2347086865133">+2348134402903</a></p>
         </div>
             <div class="testimonial">
                <h5>Mr. Hassan (63) sabon Gari kano:</h5>
-                <p>"I was on the verge of considering surgery because nothing else worked. The idea of using a catheter was terrifying. 'Prostate Cure Plus' was my last hope, and it delivered beyond my expectations. Not only did it prevent the need for surgery, but it also provided permanent relief from my prostate issues. I am eternally grateful for this product."</p>
+                <p>"I was on the verge of considering surgery because nothing else worked. The idea of using a catheter was terrifying. 'Prostalin Plus' was my last hope, and it delivered beyond my expectations. Not only did it prevent the need for surgery, but it also provided permanent relief from my prostate issues. I am eternally grateful for this product."</p>
           <p>Contact for Verification: <a href="tel:+2347086865133">+2349054738318</a></p>
             </div>
         </div>
@@ -463,16 +459,16 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
   <h2 style="color: #2c3e50; font-family: 'Arial', sans-serif; text-align: center;">Recognized by Trusted Media: A Proven Solution for Prostate Health</h2>
   <p style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.6;">
  <img src="img/newp.jpg"/>
-    <strong>Prostate Cure Plus</strong> has been featured in one of Nigeria's leading newspapers, highlighting its remarkable benefits for men over 40 suffering from prostate-related challenges. This recognition is a testament to our commitment to providing a natural, effective, and lasting solution for issues like frequent urination, urinary pain, and erectile dysfunction.
+    <strong>Prosta Plus</strong> has been featured in one of Nigeria's leading newspapers, highlighting its remarkable benefits for men over 40 suffering from prostate-related challenges. This recognition is a testament to our commitment to providing a natural, effective, and lasting solution for issues like frequent urination, urinary pain, and erectile dysfunction.
   </p>
-  <h3 style="color: #27ae60; font-family: 'Arial', sans-serif; margin-top: 20px;">Why the Media is Talking About Prostate Cure Plus</h3>
+  <h3 style="color: #27ae60; font-family: 'Arial', sans-serif; margin-top: 20px;">Why the Media is Talking About Prostalin Plus</h3>
   <ul style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.8; list-style: none; padding-left: 0;">
     <li>✔ <strong>100% Natural Ingredients</strong>: Backed by science, our herbal formula promotes prostate health without side effects.</li>
     <li>✔ <strong>Proven Results</strong>: Countless men have experienced life-changing relief, improved sleep, and a return to vitality.</li>
     <li>✔ <strong>Expert Endorsement</strong>: Recognized for its quality and effectiveness in restoring health.</li>
   </ul>
   <p style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.6; margin-top: 20px;">
-    Your health deserves trusted solutions. Join thousands of satisfied men who have regained their confidence with <strong>Prostate Cure Plus</strong>.
+    Your health deserves trusted solutions. Join thousands of satisfied men who have regained their confidence with <strong>Prostalin Plus</strong>.
   </p>
 </section>
 
@@ -482,7 +478,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
            <h3><center>Clinical Strenght</center></h3>
      <h3 class="offer"> ENJOY MASSIVE DISCOUNT <br>
      <div>
-     <h3>LIMITED-TIME OFFER: Get Prostate Cure Plus for ₦25,000 (Normal Price: ₦40,000). </h3>
+     <h3>LIMITED-TIME OFFER: Get Prostalin Plus for ₦25,000 (Normal Price: ₦40,000). </h3>
      <h3>OFFER ENDS IN</h3>
      </h3>
      <div class="timer">
@@ -825,11 +821,11 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
 <div class="faq-section">
     <h2>Frequently Asked Questions</h2>
     <div class="faq">
-        <h3>Is Prostate Cure Plus a permanent treatment?</h3>
-        <p>Yes, Prostate Cure Plus targets the root cause of prostate enlargement to provide lasting results.</p>
+        <h3>Is Prostalin Plus a permanent treatment?</h3>
+        <p>Yes, Prostalin Plus targets the root cause of prostate enlargement to provide lasting results.</p>
     </div>
     <div class="faq">
-        <h3>Is Prostate Cure Plus natural?</h3>
+        <h3>Is Prostalin Plus natural?</h3>
         <p>Absolutely. Our formula is 100% natural and herbal, ensuring no harmful side effects.</p>
     </div>
     <div class="faq">
