--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
-    <a class="whats-app" href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
+    <a class="whats-app" href="https://api.whatsapp.com/send?phone=2347052501411&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
         <i class="fa fa-whatsapp  my-float"></i>
      </a>
    <link rel="canonical" href="https://prostate-wel.xyz/" />
@@ -420,7 +420,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
             <div class="testimonial">
                  <img class="imgtest" src="img/qw.png" alt="Avatar" style="width:90px">
                 <h5>Mr. Ade (53), Berger Lagos</h5>
-                <p>"Before discovering 'Prostalin Plus', I was waking up multiple times a night to urinate. I tried various treatments like Norland and Duodart, but nothing provided lasting relief. Within a few weeks of starting 'Prostalin Plus', I could sleep through the night without any interruptions. It’s truly a miracle. I finally have my life back!"</p>
+                <p>"Before discovering 'Prostalin Plus', I was waking up multiple times a night to urinate. I tried various treatments , but nothing provided lasting relief. Within a few weeks of starting 'Prostalin Plus', I could sleep through the night without any interruptions. It’s truly a miracle. I finally have my life back!"</p>
              <p>Contact for Verification: <a href="tel:+2347086865133">+2348033119148</a></p>
      </div>
             <div class="testimonial">
@@ -834,7 +834,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
        If you don't see noticeable improvements, we'll refund your investment. No questions asked.</li>
   <li>✅ Specially Formulated for Nigerian Men</li>
 </ol></b>
-<a href="https://api.whatsapp.com/send?phone=2348134402903&text=Good%20day%2C%20I%20want%20to%20order%20the%20prostate%20wel%20solution%20capsules." target="_blank">
+<a href="https://api.whatsapp.com/send?phone=23487052501411&text=Good%20day%2C%20I%20want%20to%20order%20the%20prostate%20wel%20solution%20capsules." target="_blank">
 <img src="img/whatsapp.png" alt="order through whatsapp"><br></a>
 
      <footer class="footer-distributed">
