--- a/index.html
+++ b/index.html
@@ -394,14 +394,14 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
             <li><strong>Magnesium Sterate:</strong> Helps maintain healthy prostate function and reduces inflammation.</li>
         </ul>
 
-        <p>These ingredients work together to give lasting results and help you live pain-free without worrying about surgery or expensive treatments.</p>
+        <p>PROSTALIN PLUS IS AN EUROPEAN STANDARD PRODUCT PRODUCE IN MACEDONIA EUROPE P TO ENABLE OPTIMAL BALANCE FOR HEALTHY PROSTATE.</p>
 
         <div class="media">
             <img src="img/prostalin.jpg" alt="Prostalin Plus Bottle" class="product-image">
             
         </div>
     </section>
- <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostalin Plus'.</p>
+ <p>FOR EVERYONE SUFFERING PROSTATE PROBLEMS. PROSTALIN PLUS IS NOW AVAILABLE TO ENJOY OPTIMAL BALANCE FOR HEALTHY PROSTATE </p>
 
 <div class="benefits-container">
         <h2>What Prostalin Plus Can Do for You</h2>
