--- a/index.html
+++ b/index.html
@@ -820,7 +820,46 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
         <p>Each bottle contains 60 capsules, designed to last for 15 days.</p>
     </div>
 </div>
-
+ <section class="products">
+        <h2>Check Our Other Products</h2>
+        <div class="product-container">
+            <div class="product">
+                <img src="img/product1.jpg" alt="Product 1">
+                <h3>Product 1</h3>
+                <p>Short description of product 1.</p>
+            </div>
+            <div class="product">
+                <img src="img/product2.jpg" alt="Product 2">
+                <h3>Product 2</h3>
+                <p>Short description of product 2.</p>
+            </div>
+            <div class="product">
+                <img src="img/product3.jpg" alt="Product 3">
+                <h3>Product 3</h3>
+                <p>Short description of product 3.</p>
+            </div>
+             <div class="product">
+                <img src="img/product4.jpg" alt="Product 4">
+                <h3>Product 4</h3>
+                <p>Short description of product 3.</p>
+            </div>
+             <div class="product">
+                <img src="img/product5.jpg" alt="Product 5">
+                <h3>Product 5</h3>
+                <p>Short description of product 3.</p>
+            </div>
+              <div class="product">
+                <img src="img/product6.jpg" alt="Product 6">
+                <h3>Product 6</h3>
+                <p>Short description of product 3.</p>
+            </div>
+              <div class="product">
+                <img src="img/product7.jpg" alt="Product 7">
+                <h3>Product 7</h3>
+                <p>Short description of product 3.</p>
+            </div> 
+        </div>
+    </section>
 <h3 class="definition"><center>Here's why our treatment stands out from the rest:</h3></center>
   <li><b>✅ Proven Results - Backed by Research:</b> Our treatment has been specifically designed to target the root causes of prostate issues.
        Experience relief from frequent urination, discomfort, and other bothersome symptoms that have been holding you back.</li>
