--- a/index.html
+++ b/index.html
@@ -201,6 +201,43 @@ h2 {
     text-align: center;
     margin-bottom: 20px;
 }
+         
+
+
+.products {
+    padding: 20px;
+    background-color: #f4f4f4;
+}
+
+.product-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.product {
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 250px;
+}
+
+.product img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.product h3 {
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+.product p {
+    font-size: 14px;
+    color: #555;
+}
 
 .benefits-list {
     list-style-type: disc;
