--- a/prost.html
+++ b/prost.html
@@ -1,81 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prostatitis Treatment - Permanent Solution</title>
-    <meta name="description" content="Discover how to permanently cure Prostatitis, stop painful urination, and regain full prostate health.">
-    <meta name="keywords" content="Prostatitis cure, prostate health, stop painful urination, urinary tract infection treatment">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            border-radius: 10px;
-        }
-        h1, h2 {
-            color: #007bff;
-        }
-        .cta-button {
-            display: block;
-            width: 100%;
-            padding: 15px;
-            background: #28a745;
-            color: #fff;
-            text-align: center;
-            font-size: 18px;
-            border-radius: 5px;
-            text-decoration: none;
-            margin-top: 20px;
-        }
-        .cta-button:hover {
-            background: #218838;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Prostatitis Treatment - ProstateGuard+</title>
+  <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+    }
+    h1, h2, h3, h4 {
+      margin-bottom: 1rem;
+    }
+    /* Container */
+    .container {
+      width: 80%;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    /* Main Header */
+    .main-header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .main-header h1 {
+      font-size: 2.5rem;
+      color: #e74c3c;
+    }
+    .main-header h2 {
+      font-size: 1.75rem;
+      color: #2c3e50;
+    }
+    /* Callout */
+    .callout {
+      background-color: #e74c3c;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 1.2rem;
+    }
+    .callout p {
+      margin-bottom: 1rem;
+    }
+    /* Sections */
+    .section {
+      margin-bottom: 40px;
+    }
+    .section h2 {
+      color: #34495e;
+    }
+    .section p {
+      font-size: 1rem;
+      color: #7f8c8d;
+      line-height: 1.6;
+    }
+    /* Button */
+    .cta-btn {
+      display: inline-block;
+      padding: 15px 25px;
+      background-color: #27ae60;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+      text-align: center;
+      margin-top: 20px;
+      font-size: 1.2rem;
+    }
+    .cta-btn:hover {
+      background-color: #2ecc71;
+    }
+    /* Pop-Up */
+    .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #fff;
+      border: 2px solid #34495e;
+      padding: 20px;
+      width: 80%;
+      max-width: 400px;
+      z-index: 9999;
+    }
+    .popup h3 {
+      font-size: 1.5rem;
+      color: #e74c3c;
+      margin-bottom: 15px;
+    }
+    .popup p {
+      font-size: 1.1rem;
+      color: #34495e;
+    }
+    .popup .popup-btn {
+      padding: 10px 20px;
+      background-color: #e74c3c;
+      color: white;
+      font-weight: bold;
+      border-radius: 5px;
+      text-decoration: none;
+      display: block;
+      margin-top: 20px;
+      text-align: center;
+    }
+    .popup .popup-btn:hover {
+      background-color: #c0392b;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Say Goodbye to Prostatitis and Urinary Pain!</h1>
-        <p>Clinically Proven | Trusted by Thousands of Nigerian Men | 100% Natural Ingredients</p>
-        <hr>
-        <h2>Do You Experience These Symptoms?</h2>
-        <ul>
-            <li>🔥 Pain while urinating</li>
-            <li>🚽 Frequent urination, especially at night</li>
-            <li>💧 Weak or interrupted urine stream</li>
-            <li>🚫 Inability to empty your bladder fully</li>
-            <li>💔 Reduced sexual performance or erectile dysfunction</li>
-        </ul>
-        <p>If any of these sound familiar, you're not alone. But the good news is, you can treat Prostatitis permanently.</p>
-        <h2>Introducing Prostatin Plus</h2>
-        <p>Prostatin Plus is a European-standard herbal treatment that naturally shrinks the prostate, eliminates infections, and restores normal urinary functions.</p>
-        <h3>How It Works:</h3>
-        <ul>
-            <li><strong>Saw Palmetto:</strong> Reduces prostate size and relieves frequent urination.</li>
-            <li><strong>Nettle Extract:</strong> Helps improve urine flow and reduce pain.</li>
-            <li><strong>Pygeum Africanum:</strong> Supports healthy prostate function and sexual health.</li>
-            <li><strong>Magnesium Stearate:</strong> Reduces inflammation and promotes prostate health.</li>
-        </ul>
-        <img src="img/prostatin-plus.jpg" alt="Prostatin Plus Bottle" class="img-fluid">
-        <h2>Why Choose Prostatin Plus?</h2>
-        <ul>
-            <li>✅ 100% Herbal and Natural</li>
-            <li>✅ No Side Effects</li>
-            <li>✅ Approved by Health Experts</li>
-            <li>✅ Works Within 30 Days</li>
-        </ul>
-        <a href="https://api.whatsapp.com/send?phone=2347052501411&text=I'm%20Interested%20In%20Getting%20Your%20Prostatitis%20Treatment" class="cta-button">Order Now via WhatsApp</a>
-        <p>Limited stock available! Order today to take advantage of our discount.</p>
+
+  <div class="container">
+
+    <!-- Callout -->
+    <div class="callout">
+      <p>🚨 Attention Men Suffering from Prostatitis! 🚨</p>
+      <h2>Discover the Fastest, Natural Way to Get Rid of Prostatitis for Good – Without Surgery, Recurring Pain, or Expensive Medications!</h2>
     </div>
+
+    <!-- Introduction Section -->
+    <section class="section">
+      <h2>The Shocking Truth About Prostatitis That Doctors Don’t Tell You!</h2>
+      <p>Traditional treatments only provide <strong>temporary relief</strong>, but they don’t address the <strong>root cause of prostatitis</strong> – inflammation, bacterial resistance, and poor prostate health. That’s why, even after taking medications, <strong>more than 65% of men experience recurrent prostatitis within a year.</strong></p>
+      <p>If you don’t find a permanent solution, prostatitis can lead to <strong>chronic pelvic pain, difficulty urinating, erectile dysfunction, and even infertility!</strong></p>
+      <p>But don’t worry—there’s <strong>a natural, safe, and proven way to eliminate prostatitis for good!</strong></p>
+    </section>
+
+    <!-- Solution Section -->
+    <section class="section">
+      <h2>Introducing the Ultimate Prostatitis Treatment – 100% Natural & Doctor-Approved!</h2>
+      <p>After years of research, we’ve developed a <strong>proven, all-natural solution that eliminates prostatitis quickly and prevents it from returning</strong> – without harmful drugs or invasive procedures.</p>
+      <p>Meet <strong>ProstateGuard+</strong>, the <strong>#1 doctor-recommended herbal supplement</strong> that fights inflammation, supports prostate health, and restores your body's natural balance.</p>
+      <ul>
+        <li>💚 Reduces prostate inflammation fast</li>
+        <li>💚 Stops frequent and painful urination</li>
+        <li>💚 Improves urinary flow and bladder control</li>
+        <li>💚 Enhances sexual performance and stamina</li>
+        <li>💚 Prevents recurring prostatitis</li>
+      </ul>
+    </section>
+
+    <!-- Why Trust Us Section -->
+    <section class="section">
+      <h2>Why Trust Us? Meet Our Medical Experts</h2>
+      <p><strong>Dr. James Carter, Urologist (20+ Years of Experience)</strong></p>
+      <p>“ProstateGuard+ is the best natural solution for prostatitis. It fights inflammation at the root, unlike antibiotics that only offer temporary relief.”</p>
+      <p><strong>Certified Herbalist, Daniel Wong</strong></p>
+      <p>“I’ve helped thousands of men recover from prostatitis with this formula. It’s packed with powerful anti-inflammatory and immune-boosting herbs.”</p>
+    </section>
+
+    <!-- Customer Testimonials Section -->
+    <section class="section">
+      <h2>Real Men, Real Results! Hear from Our Happy Customers:</h2>
+      <p>🌟 “I used to wake up 5-6 times a night to urinate. Within a week of using ProstateGuard+, my symptoms were gone! It’s a game-changer.” – <strong>Michael T.</strong></p>
+      <p>🌟 “I suffered from chronic prostatitis for years. After taking ProstateGuard+, I no longer feel pain, and my sex life has improved too!” – <strong>David O.</strong></p>
+      <p>🌟 “Doctors gave me antibiotics over and over, but nothing worked. This supplement saved my life. No more burning pain!” – <strong>Joshua B.</strong></p>
+    </section>
+
+    <!-- Offer Section -->
+    <section class="section">
+      <h2>🎁 LIMITED-TIME OFFER: Get ProstateGuard+ for 50% Off Today!</h2>
+      <p>We want every man to experience the life-changing benefits of <strong>ProstateGuard+</strong>, so for a limited time, we’re offering <strong>an exclusive 50% discount!</strong></p>
+      <p>But hurry! This special deal is <strong>only available while supplies last!</strong></p>
+      <p><strong>Normally: ₦40,000 – Today Only: ₦19,950!</strong></p>
+      <p>💎 <strong>FREE express delivery across Nigeria</strong></p>
+      <p>💰 <strong>Buy 2 & Get 1 Free – Limited Stock!</strong></p>
+      <a href="#" class="cta-btn">Order Now & Claim Your Discount!</a>
+    </section>
+
+    <!-- Bonus Section -->
+    <section class="section">
+      <h2>🚀 FREE Bonuses When You Order Today!</h2>
+      <ul>
+        <li>🎁 Prostate Health Guide – Learn how to keep your prostate healthy for life!</li>
+        <li>🎁 Free 24/7 Support from Our Health Experts</li>
+        <li>🎁 Lifetime Discount on Future Orders</li>
+      </ul>
+    </section>
+
+    <!-- Guarantee Section -->
+    <section class="section">
+      <h2>💯 100% Risk-Free, Money-Back Guarantee!</h2>
+      <p>We are so confident in <strong>ProstateGuard+</strong> that we offer a <strong>30-Day Money-Back Guarantee</strong>.</p>
+      <p>If you don’t see results, just email us – and we’ll refund every Naira. <strong>No questions asked!</strong></p>
+      <a href="#" class="cta-btn">Try It Today, 100% Risk-Free!</a>
+    </section>
+
+    <!-- Warning Section -->
+    <section class="section">
+      <h2>📢 FINAL WARNING: Don’t Suffer Another Day!</h2>
+      <p>🔴 <strong>If you don’t act now, your prostatitis symptoms may get worse.</strong></p>
+      <p>🔴 <strong>Ignoring prostatitis can lead to long-term prostate damage and erectile dysfunction.</strong></p>
+      <p>🔴 <strong>Stop relying on medications that don’t work – Try ProstateGuard+ Today!</strong></p>
+      <a href="#" class="cta-btn">Claim Your 50% Discount Now!</a>
+    </section>
+
+  </div>
+
+  <!-- Pop-Up -->
+  <div class="popup" id="popup">
+    <h3>New Order!</h3>
+    <p><strong>Chuka O.</strong> from <strong>Abuja</strong> just ordered ProstateGuard+!</p>
+    <a href="#" class="popup-btn" onclick="closePopup()">Close</a>
+  </div>
+
+  <script>
+    // Popup functionality
+    function openPopup() {
+      document.getElementById("popup").style.display = "block";
+    }
+
+    function closePopup() {
+      document.getElementById("popup").style.display = "none";
+    }
+
+    // Show popup every 3 minutes
+    setInterval(function() {
+      openPopup();
+      setTimeout(closePopup, 3000);
+    }, 180000); // 180000ms = 3 minutes
+  </script>
+
 </body>
 </html>
