--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="keywords" content="prostate support, urinary wellness, herbal supplement, men's health">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
+        /* Sticky Header */
+.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: #2d512d;
+  padding: 10px 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f8f9fa;
@@ -92,6 +102,18 @@
         }
     </style>
 </head>
+    <header class="sticky-header">
+  <div class="nav-container">
+    <div class="logo">🌿 Green Global Empire</div>
+    <nav class="main-nav">
+      <a href="#home">Home</a>
+      <a href="#products">Products</a>
+      <a href="#blog">Blog</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+
 <body>
     <div class="container">
         <div class="content">
