--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
   padding: 10px 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+.nav-container {
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.logo {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #dfffd6;
+}
+
+.main-nav a {
+  margin-left: 20px;
+  text-decoration: none;
+  font-weight: 500;
+  color: #d0ffd0;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+}
+
+.main-nav a:hover {
+  color: #ffffff;
+}
 
         body {
             font-family: Arial, sans-serif;
