--- a/index.html
+++ b/index.html
@@ -3,48 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Natural Prostate Support | Gentle Herbal Relief</title>
-    <meta name="description" content="Discover a natural herbal supplement designed to support prostate health and urinary comfort for men.">
-    <meta name="keywords" content="prostate support, urinary wellness, herbal supplement, men's health">
+    <title>Free Guide: 3 Natural Steps to Shrink Prostate Naturally</title>
+    <meta name="description" content="Get our free prostate wellness guide showing how thousands of men reduce enlarged prostate symptoms naturally in 30 days or less.">
+    <meta name="keywords" content="free prostate guide, prostate remedy, shrink prostate, painful urination, men's wellness">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
-        /* Sticky Header */
-.sticky-header {
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  background-color: #2d512d;
-  padding: 10px 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-.nav-container {
-  max-width: 1200px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.logo {
-  font-size: 1.4rem;
-  font-weight: bold;
-  color: #dfffd6;
-}
-
-.main-nav a {
-  margin-left: 20px;
-  text-decoration: none;
-  font-weight: 500;
-  color: #d0ffd0;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-}
-
-.main-nav a:hover {
-  color: #ffffff;
-}
-
+        .sticky-header {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background-color: #2d512d;
+            padding: 10px 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .nav-container {
+            max-width: 1200px;
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .logo {
+            font-size: 1.4rem;
+            font-weight: bold;
+            color: #dfffd6;
+        }
+        .main-nav a {
+            margin-left: 20px;
+            text-decoration: none;
+            font-weight: 500;
+            color: #d0ffd0;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+        .main-nav a:hover {
+            color: #ffffff;
+        }
         body {
             font-family: Arial, sans-serif;
             background-color: #f8f9fa;
@@ -85,6 +80,13 @@
             font-size: 18px;
             margin-bottom: 10px;
             color: #333;
+        }
+        .form-section p.benefit {
+            background: #e0f7e9;
+            padding: 10px;
+            border-left: 4px solid #28a745;
+            margin-bottom: 15px;
+            font-weight: 600;
         }
         .form-section input {
             margin-bottom: 15px;
@@ -129,7 +131,8 @@
         }
     </style>
 </head>
-    <header class="sticky-header">
+<body>
+<header class="sticky-header">
   <div class="nav-container">
     <div class="logo">🌿 Green Global Empire</div>
     <nav class="main-nav">
@@ -141,34 +144,35 @@
   </div>
 </header>
 
-<body>
-    <div class="container">
-        <div class="content">
-            <h1>Gentle Herbal Support for Prostate & Urinary Health</h1>
-            <p>Discover a natural supplement made with traditional herbs to help men maintain comfort and confidence as they age.</p>
-            <img src="img/product-bottle.png" alt="Herbal Prostate Supplement">
-        </div>
-        <div class="form-section">
-            <h2>Request Your Free Info Guide Now</h2>
-            <p>Fill in your details to receive the free prostate wellness guide via WhatsApp or Email.</p>
-            <form action="https://formspree.io/f/mayavdlg" method="POST">
-                <input type="text" name="name" placeholder="Full Name" required>
-                <input type="tel" name="phone" placeholder="Phone Number" minlength="11" pattern="\d{11}" required>
-                <input type="email" name="email" placeholder="Email Address">
-                <button type="submit">Send Me the Guide</button>
-            </form>
-            <p class="disclaimer">This product is not intended to diagnose, treat, cure or prevent any disease. By submitting, you consent to being contacted via WhatsApp or email.</p>
-        </div>
-    </div>
+<div class="container">
+  <div class="content">
+    <h1>Free Prostate Wellness Guide Reveals: 3 Natural Ways to Reduce Pain & Frequent Urination</h1>
+    <p>Over 2,000 Nigerian men have used these herbal strategies to support a healthy, comfortable prostate — without drugs or surgery.</p>
+    <img src="img/product-bottle.png" alt="Herbal Prostate Supplement">
+  </div>
+  <div class="form-section">
+    <h2>Get Instant Access to This FREE Prostate Wellness Guide</h2>
+    <p class="benefit">✅ Discover 3 natural herbs to shrink the prostate naturally</p>
+    <p class="benefit">✅ Learn how to stop painful urination, dribbling & midnight urge</p>
+    <p class="benefit">✅ Sent directly to your WhatsApp or Email</p>
+    <form action="https://formspree.io/f/mayavdlg" method="POST">
+      <input type="text" name="name" placeholder="Full Name" required>
+      <input type="tel" name="phone" placeholder="Phone Number" minlength="11" pattern="\d{11}" required>
+      <input type="email" name="email" placeholder="Email Address">
+      <button type="submit">Yes, Send Me the Free Guide</button>
+    </form>
+    <p class="disclaimer">This information is for educational purposes only and does not substitute for medical advice. By submitting, you agree to receive follow-up contact via WhatsApp or email.</p>
+  </div>
+</div>
 
-    <footer class="text-center">
-        <p><strong>Green Global Empire</strong></p>
-        <p>Contact: +234-903-792-5799 | Email: support@herbaldelight.ng</p>
-        <a href="#">About Us</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms & Conditions</a>
-        <a href="#">Shipping & Returns</a>
-        <p>&copy; 2025 Green Global Empire. All rights reserved.</p>
-    </footer>
+<footer class="text-center">
+  <p><strong>Green Global Empire</strong></p>
+  <p>Contact: +234-903-792-5799 | Email: support@herbaldelight.ng</p>
+  <a href="#">About Us</a>
+  <a href="#">Privacy Policy</a>
+  <a href="#">Terms & Conditions</a>
+  <a href="#">Shipping & Returns</a>
+  <p>&copy; 2025 Green Global Empire. All rights reserved.</p>
+</footer>
 </body>
 </html>
