--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <div class="content">
     <h1>Free Prostate Wellness Guide Reveals: 3 Natural Ways to Reduce Pain & Frequent Urination</h1>
     <p>Over 2,000 Nigerian men have used these herbal strategies to support a healthy, comfortable prostate — without drugs or surgery.</p>
-    <img src="img/product-bottle.png" alt="Herbal Prostate Supplement">
+    <img src="img/bk.png" alt="Herbal Prostate book">
   </div>
   <div class="form-section">
     <h2>Get Instant Access to This FREE Prostate Wellness Guide</h2>
