--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <a href="#products">Products</a>
       <a href="#blog">Blog</a>
       <a href="#contact">Contact</a>
-     <a href="#contact">MLM & Network Marketing </a>
+     <a href="#contact">Multi Level Marketing </a>
     </nav>
   </div>
 </header>
