--- a/index.html
+++ b/index.html
@@ -9,37 +9,83 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
         .sticky-header {
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            background-color: #2d512d;
-            padding: 10px 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .nav-container {
-            max-width: 1200px;
-            margin: auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        .logo {
-            font-size: 1.4rem;
-            font-weight: bold;
-            color: #dfffd6;
-        }
-        .main-nav a {
-            margin-left: 20px;
-            text-decoration: none;
-            font-weight: 500;
-            color: #d0ffd0;
-            font-size: 1rem;
-            transition: color 0.3s ease;
-        }
-        .main-nav a:hover {
-            color: #ffffff;
-        }
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: #2d512d;
+    padding: 10px 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .nav-container {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .logo {
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: #dfffd6;
+  }
+
+  .main-nav {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  .main-nav > a,
+  .dropdown > a {
+    margin-left: 20px;
+    text-decoration: none;
+    font-weight: 500;
+    color: #d0ffd0;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+  }
+
+  .main-nav a:hover {
+    color: #ffffff;
+  }
+
+  /* Dropdown Menu */
+  .dropdown {
+    position: relative;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    top: 30px;
+    background-color: #2d512d;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    padding: 10px 0;
+    border-radius: 4px;
+    min-width: 200px;
+    z-index: 1001;
+  }
+
+  .dropdown-content a {
+    display: block;
+    padding: 10px 20px;
+    color: #d0ffd0;
+    text-decoration: none;
+    font-size: 0.95rem;
+    white-space: nowrap;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #3c6b3c;
+    color: #fff;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
         body {
             font-family: Arial, sans-serif;
             background-color: #f8f9fa;
@@ -190,10 +236,27 @@
     <div class="logo">🌿 Green Global Empire</div>
     <nav class="main-nav">
       <a href="#home">Home</a>
-      <a href="#products">Products</a>
+
+      <!-- Products Dropdown -->
+      <div class="dropdown">
+        <a href="#products">Products ▾</a>
+        <div class="dropdown-content">
+          <a href="#prostate">Prostate Health</a>
+          <a href="#diabetes">Diabetes Health</a>
+          <a href="#liver">Liver Detox</a>
+          <a href="#fertility"> Fertility</a>
+          <a href="#hepatitis">Hepatitis</a>
+          <a href="#immunity">Immune Booster</a>
+          <a href="#ulcer">Ulcer Treatment</a>
+          <a href="#bp">Blood Pressure Support</a>
+          <a href="#skin">Skin & Beauty</a>
+          <a href="#wellness">Total Wellness Pack</a>
+        </div>
+      </div>
+
       <a href="#blog">Blog</a>
       <a href="#contact">Contact</a>
-     <a href="#contact">Multi Level Marketing </a>
+      <a href="#mlm">Multi Level Marketing</a>
     </nav>
   </div>
 </header>
