--- a/index.html
+++ b/index.html
@@ -395,4 +395,22 @@
     <p>&copy; 2025 Green Health . All Rights Reserved.</p>
   </div>
 </footer>
+<script>
+  function toggleMobileNav() {
+    document.getElementById('mobileNav').classList.toggle('show');
+  }
 
+  // Animate sections on scroll
+  const sections = document.querySelectorAll('section');
+
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+      }
+    });
+  }, { threshold: 0.2 });
+
+  sections.forEach(section => observer.observe(section));
+</script>
+</body>
