--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="dropdown">
         <a href="#products">Products▾</a>
         <div class="dropdown-content">
-          <a href="#prostate">Prostate Health</a>
+          <a href="prostalin.html">Prostate Health</a>
           <a href="#diabetes">Diabetes Health</a>
           <a href="#liver">Liver Detox</a>
           <a href="#fertility"> Fertility</a>
