--- a/index.html
+++ b/index.html
@@ -233,34 +233,33 @@
 <body>
   <!-- WhatsApp Chat Button -->
 <a href="https://wa.me/2349037925799?text=Hello%20Dr%20Dee%2C%20I%20need%20help%20with%20prostate%20treatment" 
-   class="whatsapp-chat" target="_blank" aria-label="Chat on WhatsApp">
+   class="whatsapp-chat" target="_blank" rel="noopener noreferrer">
+  💬 Chat with Dr Dee
   <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp Icon">
   <span>Chat with Dr Dee</span>
 </a>
 
 <style>
-  .whatsapp-chat {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #25D366;
-    color: white;
-    padding: 10px 15px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 14px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    z-index: 9999;
-    transition: transform 0.3s ease;
-  }
+ .whatsapp-chat {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  color: white;
+  padding: 12px 18px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 50px;
+  text-decoration: none;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  z-index: 9999;
+  transition: background-color 0.3s ease;
+}
 
-  .whatsapp-chat:hover {
-    transform: scale(1.05);
-    color: #fff;
-  }
+.whatsapp-chat:hover {
+  background-color: #1ebd5a;
+}
+
 
   .whatsapp-chat img {
     margin-right: 8px;
