--- a/prostalin.html
+++ b/prostalin.html
@@ -148,6 +148,21 @@
     </div>
   </div>
 </section>
+<div class="combo-heading">Prostate Health Combo Pack</div>
+
+  <div class="combo-container">
+    <div class="product-card">
+      <img src="product1.jpg" alt="Prostate Product 1" class="product-image">
+      <div class="product-title">Prostate Cleaner</div>
+      <div class="product-desc">Helps reduce prostate size and stop frequent urination.</div>
+    </div>
+
+    <div class="product-card">
+      <img src="product2.jpg" alt="Prostate Product 2" class="product-image">
+      <div class="product-title">Performance Booster</div>
+      <div class="product-desc">Boosts erection, restores sex drive, and supports urinary flow.</div>
+    </div>
+  </div>
 
   <!-- ORDER FORM -->
   <section id="order-form">
