--- a/prostalin.html
+++ b/prostalin.html
@@ -152,15 +152,15 @@
 
   <div class="combo-container">
     <div class="product-card">
-      <img src="product1.jpg" alt="Prostate Product 1" class="product-image">
-      <div class="product-title">Prostate Cleaner</div>
+      <img src="images/prost.jpg" alt="Prostate Product 1" class="product-image">
+      <div class="product-title">Prostatalin Plus</div>
       <div class="product-desc">Helps reduce prostate size and stop frequent urination.</div>
     </div>
 
     <div class="product-card">
-      <img src="product2.jpg" alt="Prostate Product 2" class="product-image">
-      <div class="product-title">Performance Booster</div>
-      <div class="product-desc">Boosts erection, restores sex drive, and supports urinary flow.</div>
+      <img src="images/unipree.jpg" alt="Prostate Product 2" class="product-image">
+      <div class="product-title">Unipree/div>
+      <div class="product-desc">Boosts erection, restores sex drive, cures prostatitis and supports urinary flow.</div>
     </div>
   </div>
 
