--- a/prostalin.html
+++ b/prostalin.html
@@ -158,7 +158,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/unipree.jpg" alt="Prostate Product 2" class="product-image">
+      <img src="images/uni.jpg" alt="Prostate Product 2" class="product-image">
       <div class="product-title">Unipree/div>
       <div class="product-desc">Boosts erection, restores sex drive, cures prostatitis and supports urinary flow.</div>
     </div>
