--- a/prostalin.html
+++ b/prostalin.html
@@ -159,7 +159,7 @@
 
     <div class="product-card">
       <img src="images/uni.jpg" alt="Prostate Product 2" class="product-image">
-      <div class="product-title">Unipree/div>
+      <div class="product-title">Unipree</div>
       <div class="product-desc">Boosts erection, restores sex drive, cures prostatitis and supports urinary flow.</div>
     </div>
   </div>
