--- a/prostalin.html
+++ b/prostalin.html
@@ -166,7 +166,7 @@
 
   <!-- ORDER FORM -->
   <section id="order-form">
-    <h2>Order Prostalin Plus Now</h2>
+    <h2>Get Your Order Now</h2>
     <form action="https://formspree.io/f/moveovvn" method="POST">
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" required />
@@ -183,8 +183,8 @@
       <label for="quantity">Choose Quantity:</label>
       <select id="quantity" name="quantity" required>
         <option value="">Select an option</option>
-        <option value="1 Bottle - ₦30,000">1 Bottle – ₦30,000</option>
-        <option value="2 Bottles + Consultation – ₦55,000">2 Bottles + Consultation – ₦55,000</option>
+        <option value="1 Bottle - ₦30,000">1 Bottle – ₦33,000</option>
+        <option value="2 Bottles + Consultation – ₦60,000">2 Bottles + Consultation – ₦55,000</option>
         <option value="1 + UNIPREE – ₦70,000">1 Bottle + UNIPREE – ₦70,000</option>
         <option value="2 + 2 UNIPREE – ₦140,000">2 Bottles + 2 UNIPREE – ₦140,000</option>
       </select>
