--- a/prostalin.html
+++ b/prostalin.html
@@ -256,8 +256,8 @@
   </div>
 </footer>
   <!-- WHATSAPP CTA -->
-  <a href="https://wa.me/2347086865133" class="whatsapp-cta" target="_blank">
-    Chat with Us on WhatsApp
+  <a href="https://wa.me/2348033731636" class="whatsapp-cta" target="_blank">
+    Chat with Dr Dee on WhatsApp
   </a>
 <script>
   function startCountdown() {
