--- a/prostalin.html
+++ b/prostalin.html
@@ -31,7 +31,7 @@
       </div>
 
       <a href="#blog">Blog</a>
-      <a href="#mlm">Multi Level Marketing</a>
+      <a href="https://www.greennatureempire.com/">Multi Level Marketing</a>
     </nav>
   </div>
 </header>
