--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <a href="#products">Products▾</a>
         <div class="dropdown-content">
           <a href="prostalin.html">Prostate Health</a>
-          <a href="#diabetes">Diabetes Health</a>
+          <a href="diab.html">Diabetes Health</a>
           <a href="#liver">Liver Detox</a>
           <a href="#fertility"> Fertility</a>
           <a href="#hepatitis">Hepatitis</a>
