--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       </div>
 
       <a href="#blog">Blog</a>
-      <a href="#mlm">Multi Level Marketing</a>
+      <a href="https://www.greennatureempire.com/">Multi Level Marketing</a>
     </nav>
   </div>
 </header>
