--- a/prostalin.html
+++ b/prostalin.html
@@ -13,6 +13,14 @@
   gtag('js', new Date());
   gtag('config', 'AW-16892089101');
 </script>
+<!-- Event snippet for Submit lead form conversion page -->
+<script>
+  gtag('event', 'conversion', {
+    'send_to': 'AW-16892089101/G6NnCKOr-68aEI2m4_Y-',
+    'value': 1.0,
+    'currency': 'USD'
+  });
+</script>
 
 </head>
 <body>
