--- a/thanks.html
+++ b/thanks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thank You - [Brand Name]</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="qstyles.css"> <!-- Link to external CSS file -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16892089101"></script>
 <script>
@@ -56,6 +56,6 @@
     </footer>
 
     <!-- Scripts (for future use, like animations or further interactivity) -->
-    <script src="scripts.js"></script> <!-- Link to external JS file -->
+    <script src="qscripts.js"></script> <!-- Link to external JS file -->
 </body>
 </html>
